Adding virtual threads as default thread pool