@@ -27,6 +27,7 @@ import java.io.IOException;
 import java.util.Map;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.ThreadFactory;
 
 import dynamic.mapping.model.MappingTreeNode;
 import dynamic.mapping.model.MappingTreeNodeSerializer;
@@ -98,17 +99,11 @@ public class App {
         executor.setQueueCapacity(25);
         return executor;
     }
-    //Assuming we can process 25 messages in parallel per CPU-Core
-    @Bean("processingCachePool")
-    public ExecutorService processingThreadPool() {
-        return Executors.newCachedThreadPool();
-        //return Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors()*25);
-    }
 
-    //Assuming we can process 10 messages in parallel per CPU-Core
-    @Bean("cachedThreadPool")
-    public ExecutorService cachedThreadPool() {
-        return Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors()*10);
+    @Bean("virtThreadPool")
+    public ExecutorService virtThreadPool() {
+        final ThreadFactory factory = Thread.ofVirtual().name("virtThread-",0).factory();
+        return Executors.newThreadPerTaskExecutor(factory);
     }
 
     @Bean
